SERVER-70103 Add mirroredReads succeeded and processed server status metrics